default/objects/Outdoor_Duty__c/Outdoor_Duty__c.object-meta.xml
<CustomObject>
    <label>Outdoor Duty</label>
    <nameField>
        <displayFormat>OD-{0000}</displayFormat>
        <label>Outdoor Duty Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outdoor Duties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>