default/objects/Outdoor_Duty__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <formula>Owner:User.Manager.FirstName &amp; &apos; &apos; &amp;  Owner:User.Manager.LastName</formula>
    <label>Approver</label>
    <type>Text</type>
</CustomField>