default/objects/Outdoor_Duty__c/fields/Domestic_Visit_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Visit_End_Date__c</fullName>
    <label>Domestic Visit End Date</label>
    <type>DateTime</type>
</CustomField>