default/objects/Outdoor_Duty__c/fields/Duplicate_Outdoor_Duty__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Outdoor_Duty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used by flow</description>
    <label>Duplicate Outdoor Duty</label>
    <type>Checkbox</type>
</CustomField>