default/objects/Outdoor_Duty__c/fields/International_Visit_End_Date__c.field-meta.xml
<CustomField>
    <fullName>International_Visit_End_Date__c</fullName>
    <label>International Visit End Date</label>
    <type>DateTime</type>
</CustomField>