default/objects/Outdoor_Duty__c/fields/International_Visit_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>International_Visit_Start_Date__c</fullName>
    <label>International Visit Start Date</label>
    <type>DateTime</type>
</CustomField>