default/objects/Outdoor_Duty__c/fields/No_of_Days_Domestic__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_Domestic__c</fullName>
    <formula>Domestic_Visit_End_Date__c - Domestic_Visit_Start_Date__c</formula>
    <label>No of Days Domestic</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>