default/objects/Outdoor_Duty__c/fields/No_of_Days_Internation__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_Internation__c</fullName>
    <formula>International_Visit_End_Date__c - International_Visit_Start_Date__c</formula>
    <label>No of Days Internation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>