default/objects/Outdoor_Duty__c/fields/OD_Duration_in_Hours_Internation__c.field-meta.xml
<CustomField>
    <fullName>OD_Duration_in_Hours_Internation__c</fullName>
    <formula>No_of_Days_Internation__c * 24</formula>
    <label>OD Duration in Hours Internation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>