default/objects/Outdoor_Duty__c/fields/OD_Request__c.field-meta.xml
<CustomField>
    <fullName>OD_Request__c</fullName>
    <displayFormat>OD-{0000}</displayFormat>
    <label>OD Request</label>
    <type>AutoNumber</type>
</CustomField>