default/objects/Outdoor_Duty__c/fields/Trip__c.field-meta.xml
<CustomField>
    <fullName>Trip__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Trip</label>
    <referenceTo>Trip__c</referenceTo>
    <relationshipLabel>Outdoor Duties</relationshipLabel>
    <relationshipName>Outdoor_Duties</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>