default/objects/Outdoor_Duty__c/fields/Trip_Type__c.field-meta.xml
<CustomField>
    <fullName>Trip_Type__c</fullName>
    <label>Trip Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>