default/objects/Outdoor_Duty__c/validationRules/EitherDomesticOrInternationalDatesRequir.validationRule-meta.xml
<ValidationRule>
    <fullName>EitherDomesticOrInternationalDatesRequir</fullName>
    <active>true</active>
    <errorConditionFormula>OR
(
 AND(
 NOT ( ISNULL(Domestic_Visit_Start_Date__c) ),
 NOT ( ISNULL( Domestic_Visit_End_Date__c ) ),
 NOT ( ISNULL( International_Visit_Start_Date__c ) ),
 NOT ( ISNULL( International_Visit_End_Date__c ) )
 ),
 AND(
 NOT ( ISNULL(Domestic_Visit_Start_Date__c) ),
 NOT ( ISNULL( Domestic_Visit_End_Date__c ) ),
 NOT ( ISNULL( International_Visit_Start_Date__c ) ),
 ISNULL( International_Visit_End_Date__c )
 ),
 AND(
 NOT ( ISNULL(Domestic_Visit_Start_Date__c) ),
 NOT ( ISNULL( Domestic_Visit_End_Date__c ) ),
 ISNULL( International_Visit_Start_Date__c ),
 NOT ( ISNULL( International_Visit_End_Date__c ) )
 ),
 AND(
 ISNULL(Domestic_Visit_Start_Date__c),
 NOT ( ISNULL( Domestic_Visit_End_Date__c ) ),
 NOT ( ISNULL( International_Visit_Start_Date__c ) ),
 NOT ( ISNULL( International_Visit_End_Date__c ) )
 ),
 AND(
 NOT ( ISNULL(Domestic_Visit_Start_Date__c) ),
 ISNULL( Domestic_Visit_End_Date__c ),
 NOT ( ISNULL( International_Visit_Start_Date__c ) ),
 NOT ( ISNULL( International_Visit_End_Date__c ) )
 )
)</errorConditionFormula>
    <errorMessage>Either add dates in domestic visit date or international visit date.</errorMessage>
</ValidationRule>