default/objects/Outdoor_Duty__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Domestic_Visit_Start_Date__c</columns>
    <columns>Domestic_Visit_End_Date__c</columns>
    <columns>International_Visit_Start_Date__c</columns>
    <columns>International_Visit_End_Date__c</columns>
    <columns>Trip__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>